--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -117,9 +117,10 @@ header{
 
 
 .main-concept {
-    font-size: 2rem;
+    font-size: 1.5rem;
     width: 90%;
     margin: 0 auto;
+
     @include for-md-screen{
         font-size: 1.2rem;
     }
@@ -158,10 +159,12 @@ header{
     div{
         display: flex;
         align-items: center;
+        justify-content: space-around; 
         gap: 10rem;
         font-weight: 600;
-        font-size: 2.5rem;
-        margin-bottom: 5rem;
+        font-size: 2rem;
+        margin: 0 auto ;
+        margin-bottom: 8rem;
 
         @include for-md-screen {
            
@@ -192,6 +195,7 @@ header{
          }
     }
     p {
+        width: 40%;
         @include for-sm-screen {
             width: 90%;
            text-align: center;
