--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -154,7 +154,7 @@ header{
 
 .logo-concept{
     margin-top: 5rem;
-
+  
 
     div{
         display: flex;
@@ -200,8 +200,82 @@ header{
     }
 }
 
+.how-can-you-use{
+    .section-title {
+        margin-bottom: 5rem;
+    }
+
+    .grid-container{
+        display: grid;
+        grid-template-columns: 1.5fr 1fr 1.5fr;
+        gap: 1rem;
+        @include for-md-screen{
+         grid-template-columns: 1fr 1fr;
+        }
+
+       > div {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            @include for-md-screen {
+                grid-column: span 1;
+            }
+            @include for-sm-screen {
+                grid-column: span 2;
+            }
+        }
+
+        > div:nth-of-type(2){
+            align-items: center;
+            justify-content: center;
+            background-color: transparent;
+            @include for-md-screen {
+                grid-column: span 2;
+                order: -1;
+                width: 30%;
+                justify-self: center;
+            }
+
+         }
+    }
+
+   
+    img[alt="iphone"]  {
+        width: 90%;
+
+    }
+
+
+    .content {
+        width: 90%;
+        margin: 0 auto;
+       
+
+        div {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            margin-bottom: 1rem;
+        }
+
+        p {
+           width: 90%;
+           margin: 0 auto;
+        }
+        h3 {
+            font-size: 2rem ;
+            @include for-md-screen {
+                font-size: 1.5rem;
+            }
+        }
+    }
+
+
+}
+
 
 footer {
+    margin-top: 5rem;
     text-align: center;
     padding: 2rem;
     background: #3C4D3E;
